--- a/equipe.html
+++ b/equipe.html
@@ -30,6 +30,12 @@
                 <a class="nav-link active" data-toggle="tab" href="equipe.html">Equipe</a>
             </li>
         </ul>
+        
+    </div>
+    <div class="container">
+        <div id="candidatoContainer"></div>
+        <script src="jquery.js" type="text/javascript"></script> 
+        <script src="main.js" type="text/javascript"></script> 
     </div>
 </body>
 
