--- a/index.html
+++ b/index.html
@@ -32,8 +32,13 @@
         </ul>
     </div>
     <div class="container">
-
-
+        <div id="candidatoContainer"></div>
+        <script src="jquery.js" type="text/javascript"></script>
+        <script src="scripts/controller/CalcController.js"> </script>
+        <script src="scripts/main.js"></script>
+        <script type="text/javascript">
+            exibirResumoCandidatos();
+         </script>
     </div>
 </body>
 
