--- a/resultadoFinal.html
+++ b/resultadoFinal.html
@@ -31,6 +31,15 @@
             </li>
         </ul>
     </div>
+    <div class="container">
+        <div id="resultado"></div>
+        <script src="jquery.js" type="text/javascript"></script>
+        <script src="scripts/controller/CalcController.js"> </script>
+        <script src="scripts/main.js"></script>
+        <script type="text/javascript">
+            exibirResultado();
+        </script>
+    </div>
 </body>
 
 </html>
