--- a/votacao.html
+++ b/votacao.html
@@ -31,6 +31,17 @@
             </li>
         </ul>
     </div>
+    <div class="container">
+        <div id="candidatoContainer"></div>
+        <script src="jquery.js" type="text/javascript"></script>
+        <script src="scripts/controller/CalcController.js"> </script>
+        <script src="scripts/main.js"></script>
+        <script type="text/javascript">
+            exibirCandidatosVotacao();
+        </script>
+
+        <button onclick="votar();" class="button">VOTAR</button>
+    </div>
 </body>
 
 </html>
